test/corpus/statements.txt
==================
Assignment
==================

w = 3.1415

---

(kcl_program
	(body_item
		(variable_declaration
			(non_fn_definition
				(identifier)
				(number)
			)
		)
	)
)

==================
Bool assignment
==================

w = true

---

(kcl_program
	(body_item
		(variable_declaration
			(non_fn_definition
				(identifier)
				(boolean)
			)
		)
	)
)

==================
String assignment
==================

name = "abc"

---

(kcl_program
	(body_item
		(variable_declaration
			(non_fn_definition
				(identifier)
				(string)
			)
		)
	)
)

==================
Function definition
==================

fn f() {
	x = "abc"
	y = "abc"
	return x
}

---

(kcl_program
	(body_item
		(variable_declaration
			(fn_definition
				(identifier)
				(param_list)
				(body_item
					(variable_declaration
						(non_fn_definition
							(identifier)
							(string)
						)
					)
				)
				(body_item
					(variable_declaration
						(non_fn_definition
							(identifier)
							(string)
						)
					)
				)
				(body_item
					(return_stmt
						(identifier)
					)
				)
			)
		)
	)
)

==================
Basic math
==================

val = 1 + 2

---

(kcl_program
	(body_item
		(variable_declaration
			(non_fn_definition
				(identifier)
				(binary_expr
				  lhs: (number)
				  operator: (binary_operator)
				  rhs: (number)
				)
			)
		)
	)
)


==================
Arrays
==================

point = [0, 0]

---

(kcl_program
	(body_item
		(variable_declaration
			(non_fn_definition
				(identifier)
				(array_expr
					(number)
					(number)
				)
			)
		)
	)
)


==================
Chaining math
==================

val = 1 + 2 / 4

---

(kcl_program
	(body_item
		(variable_declaration
			(non_fn_definition
				(identifier)
				(binary_expr
				  lhs: (number)
				  operator: (binary_operator)
				  rhs: (binary_expr
				    lhs: (number)
					operator: (binary_operator)
				    rhs: (number)
				  )
				)
			)
		)
	)
)

==================
Function call
==================

f(1, x = 10)
yLine(length = diameter)

---

(kcl_program
	(body_item
		(expr_stmt
			(fn_call
				callee: (identifier)
				unlabeledArg: (number)
				(labeledArg
					label: (identifier)
					arg: (number)
				)
			)
		)
	)
	(body_item
		(expr_stmt
			(fn_call
				callee: (identifier)
				(labeledArg
					label: (identifier)
					arg: (identifier)
				)
			)
		)
	)
)

==================
Pipes
==================

val = 1 |> f(%)

---

(kcl_program
	(body_item
		(variable_declaration
			(non_fn_definition
				(identifier)
				(binary_expr
				  lhs: (number)
				  operator: (binary_operator)
				  rhs: (fn_call callee: (identifier) unlabeledArg: (pipe_sub))
				)
			)
		)
	)
)


==================
Imports
==================

import "tests/inputs/cube.obj"

---

(kcl_program
	(body_item
		(import_stmt
			(string)
		)
	)
)


==================
Import with as
==================

import "tests/inputs/cube.obj" as cube

---

(kcl_program
	(body_item
		(import_stmt
			(string)
			(identifier)
		)
	)
)

==================
String array in arg annotation
==================

export fn circle(
  /// If not given, defaults to `[0, 0]`.
  @(includeInSnippet = true, snippetArray = ["0", "0"])
  center?: Point2d,
) {}

---

(kcl_program
  (body_item
    (variable_declaration
      (fn_definition
        (identifier)
        (param_list
          (comment)
          (annotation
            (annotation_kv
              (identifier)
              (identifier))
            (annotation_kv
              (identifier)
              (array_expr
                (string)
                (string))))
          (param
            (identifier)
            (type_name
              (identifier))))))))


==================
With exports
==================

export fn circle(@x, y) { return 1 }

---

(kcl_program
	(body_item
		(variable_declaration
			(fn_definition
				(identifier)
				(param_list
					(param (identifier))
					(param (identifier))
				)
				(body_item
					(return_stmt
						(number)
					)
				)
			)
		)
	)
)

==================
Function signatures
==================

fn circle(@x: number(Length), y: number | string): string {}

---

(kcl_program
	(body_item
		(variable_declaration
			(fn_definition
				(identifier)
				(param_list
					(param
						(identifier)
						(type_name (identifier) units: (identifier))
					)
					(param
						(identifier)
						(type_name (identifier) (identifier))
					)
				)
				(type_name (identifier))
			)
		)
	)
)

==================
Function signatures with optional
==================

fn circle(y?: number) {}

---

(kcl_program
	(body_item
		(variable_declaration
			(fn_definition
				(identifier)
				(param_list
					(param
						(identifier)
						(type_name (identifier))
					)
				)
			)
		)
	)
)

==================
Function with optional
==================

fn circle(y?) {}

---

(kcl_program
	(body_item
		(variable_declaration
			(fn_definition
				(identifier)
				(param_list
					(param
						(identifier)
					)
				)
			)
		)
	)
)

==================
Annotation
==================

@(impl = foo, other = bar)
x = 2

---

(kcl_program
	(annotation (annotation_kv (identifier) (identifier)) (annotation_kv (identifier) (identifier)))
	(body_item
		(variable_declaration
			(non_fn_definition
				(identifier)
				(number)
			)
		)
	)
)


==================
If
==================

x = if true { 1 } else if true { 0 } else { 2 }

---

(kcl_program
	(body_item
		(variable_declaration
			(non_fn_definition
				(identifier)
				(if_expr
				condition:      (boolean)
				if_clause:      (body_item (expr_stmt (number)))
				condition:      (boolean)
				else_if_clause: (body_item (expr_stmt (number)))
				else_clause:    (body_item (expr_stmt (number)))
				)
			)
		)
	)
)

==================
Params with metadata
==================

fn planeOf(
  /// Docstring
  @(includeInSnippet = true)
  @solid: Solid,
) {}

---

(kcl_program
	(body_item
		(variable_declaration
			(fn_definition
				(identifier)
				(param_list
					(comment)
					(annotation (annotation_kv (identifier) (identifier)))
					(param (identifier) (type_name (identifier)))
				)
			)
		)
	)
)

==================
Sketch block
==================

sketch001 = sketch(on = XY) {
  line1 = line(start = [var -2.11mm, var -4.63mm], end = [var 0mm, var 8.75mm])
  vertical([line1.end, ORIGIN])
  line2 = line(start = [var 0mm, var 8.75mm], end = [var 2.43mm, var -4.17mm])
  coincident([line1.end, line2.start])
  line3 = line(start = [var 2.43mm, var -4.17mm], end = [var -2.11mm, var -4.63mm])
  coincident([line2.end, line3.start])
  coincident([line3.end, line1.start])
}
region001 = region(segments = [sketch001.line1, sketch001.line2], direction = CW)

---

(kcl_program
  (body_item
    (variable_declaration
      (non_fn_definition
        (identifier)
        (sketch_block
          (labeledArg
            (identifier)
            (identifier))
          (body_item
            (variable_declaration
              (non_fn_definition
                (identifier)
                (fn_call
                  (identifier)
                  (labeledArg
                    (identifier)
                    (array_expr
                      (sketch_var
                        (number))
                      (sketch_var
                        (number))))
                  (labeledArg
                    (identifier)
                    (array_expr
                      (sketch_var
                        (number))
                      (sketch_var
                        (number))))))))
          (body_item
            (expr_stmt
              (fn_call
                (identifier)
                (array_expr
                  (member_expr
                    (identifier)
                    (identifier))
                  (identifier)))))
          (body_item
            (variable_declaration
              (non_fn_definition
                (identifier)
                (fn_call
                  (identifier)
                  (labeledArg
                    (identifier)
                    (array_expr
                      (sketch_var
                        (number))
                      (sketch_var
                        (number))))
                  (labeledArg
                    (identifier)
                    (array_expr
                      (sketch_var
                        (number))
                      (sketch_var
                        (number))))))))
          (body_item
            (expr_stmt
              (fn_call
                (identifier)
                (array_expr
                  (member_expr
                    (identifier)
                    (identifier))
                  (member_expr
                    (identifier)
                    (identifier))))))
          (body_item
            (variable_declaration
              (non_fn_definition
                (identifier)
                (fn_call
                  (identifier)
                  (labeledArg
                    (identifier)
                    (array_expr
                      (sketch_var
                        (number))
                      (sketch_var
                        (number))))
                  (labeledArg
                    (identifier)
                    (array_expr
                      (sketch_var
                        (number))
                      (sketch_var
                        (number))))))))
          (body_item
            (expr_stmt
              (fn_call
                (identifier)
                (array_expr
                  (member_expr
                    (identifier)
                    (identifier))
                  (member_expr
                    (identifier)
                    (identifier))))))
          (body_item
            (expr_stmt
              (fn_call
                (identifier)
                (array_expr
                  (member_expr
                    (identifier)
                    (identifier))
                  (member_expr
                    (identifier)
                    (identifier))))))))))
  (body_item
    (variable_declaration
      (non_fn_definition
        (identifier)
        (fn_call
          (identifier)
          (labeledArg
            (identifier)
            (array_expr
              (member_expr
                (identifier)
                (identifier))
              (member_expr
                (identifier)
                (identifier))))
          (labeledArg
            (identifier)
            (identifier)))))))

==================
Realistic subset of KCL stdlib
==================

/// Module docs here
///
/// A longer, more detailed description
/// of the module goes here.

@no_std
@settings(defaultLengthUnit = mm, kclVersion = 2.0)

/// Description goes here
///
/// ```kcl,norun
/// result = "Straße"
///   |> string::uppercase()
///
/// assertIs(result == "STRASSE")
/// ```
@(impl = std_rust, feature_tree = false)
export fn fn_name(
  /// A function docstring here
  @text: string,
): string {}

---

(kcl_program
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (annotation
    (identifier))
  (annotation
    (identifier)
    (annotation_kv
      (identifier)
      (identifier))
    (annotation_kv
      (identifier)
      (number)))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (annotation
    (annotation_kv
      (identifier)
      (identifier))
    (annotation_kv
      (identifier)
      (identifier)))
  (body_item
    (variable_declaration
      (fn_definition
        (identifier)
        (param_list
          (comment)
          (param
            (identifier)
            (type_name
              (identifier))))
        (type_name
          (identifier))))))

==================
Stdlib string.kcl
==================

/// Operations on KCL strings.
///
/// This module provides functions for transforming strings and inspecting
/// their contents.

@no_std
@settings(defaultLengthUnit = mm, kclVersion = 1.0)

/// Convert all cased characters in a string to uppercase.
///
/// This conversion is Unicode-aware and locale-independent. Some characters
/// expand into multiple characters; for example, `ß` becomes `SS`. The exact
/// mappings follow the Unicode data bundled with KCL.
///
/// Unicode normalization is not performed. Canonically equivalent strings
/// therefore retain their original representations. Empty strings and strings
/// without cased characters are returned unchanged.
///
/// ```kcl,norun
/// result = "Straße"
///   |> string::uppercase()
///
/// assertIs(result == "STRASSE")
/// ```
@(impl = std_rust, feature_tree = false)
export fn uppercase(
  /// The string to convert.
  @text: string,
): string {}

/// Convert all cased characters in a string to lowercase.
///
/// This conversion is Unicode-aware and locale-independent. Some conversions
/// depend on the surrounding characters; for example, a Greek capital sigma
/// becomes `ς` at the end of a word and `σ` elsewhere. Some characters expand
/// into multiple characters; for example, `İ` becomes `i` followed by a
/// combining dot above. The exact mappings follow the Unicode data bundled
/// with KCL.
///
/// Unicode normalization is not performed. Canonically equivalent strings
/// therefore retain their original representations. Empty strings and strings
/// without cased characters are returned unchanged.
///
/// ```kcl,norun
/// result = "KCL ΟΣ"
///   |> string::lowercase()
///
/// assertIs(result == "kcl ος")
/// ```
@(impl = std_rust, feature_tree = false)
export fn lowercase(
  /// The string to convert.
  @text: string,
): string {}

/// Compare two strings for equality.
///
/// By default, this performs an exact, case-sensitive comparison equivalent
/// to the `==` operator. Set `caseInsensitive` to `true` to compare using
/// locale-independent full Unicode case folding.
///
/// Full case folding may expand characters; for example, `Straße` and
/// `STRASSE` compare as equal. The exact mappings follow the Unicode data
/// bundled with KCL.
///
/// Unicode normalization is not performed. Canonically equivalent strings
/// with different representations therefore compare as unequal. Empty strings
/// are valid inputs, and comparison is symmetric.
///
/// This function always returns a Boolean predicate, including inside a sketch
/// block. It does not create an equivalence constraint.
///
/// ```kcl,norun
/// matches = "Straße"
///   |> string::isEqual(to = "STRASSE", caseInsensitive = true)
///
/// assertIs(matches)
/// ```
@(impl = std_rust, feature_tree = false)
export fn isEqual(
  /// The string to compare.
  @text: string,
  /// The string to compare `text` with.
  to: string,
  /// Whether to compare using locale-independent full Unicode case folding.
  caseInsensitive?: bool = false,
): bool {}

/// Remove whitespace from the start and end of a string.
///
/// Whitespace is defined by Unicode's `White_Space` property and includes
/// spaces, tabs, newlines, and non-breaking spaces. Whitespace inside the
/// string is preserved.
///
/// If the input is empty or contains only whitespace, this returns an empty
/// string. Unicode normalization and case conversion are not performed.
///
/// ```kcl,norun
/// result = "  KCL strings  "
///   |> string::trim()
///
/// assertIs(result == "KCL strings")
/// ```
@(impl = std_rust, feature_tree = false)
export fn trim(
  /// The string to trim.
  @text: string,
): string {}

/// Remove whitespace from the start of a string.
///
/// Whitespace is defined by Unicode's `White_Space` property and includes
/// spaces, tabs, newlines, and non-breaking spaces. Only the contiguous
/// whitespace at the start is removed; whitespace inside or at the end of the
/// string is preserved.
///
/// The start is the beginning of the string's character sequence, independent
/// of how the text is displayed. If the input is empty or contains only
/// whitespace, this returns an empty string. Unicode normalization and case
/// conversion are not performed.
///
/// ```kcl,norun
/// result = "  KCL strings  "
///   |> string::trimStart()
///
/// assertIs(result == "KCL strings  ")
/// ```
@(impl = std_rust, feature_tree = false)
export fn trimStart(
  /// The string to trim.
  @text: string,
): string {}

/// Remove whitespace from the end of a string.
///
/// Whitespace is defined by Unicode's `White_Space` property and includes
/// spaces, tabs, newlines, and non-breaking spaces. Only the contiguous
/// whitespace at the end is removed; whitespace at the start or inside the
/// string is preserved.
///
/// The end is the end of the string's character sequence, independent of how
/// the text is displayed. If the input is empty or contains only whitespace,
/// this returns an empty string. Unicode normalization and case conversion are
/// not performed.
///
/// ```kcl,norun
/// result = "  KCL strings  "
///   |> string::trimEnd()
///
/// assertIs(result == "  KCL strings")
/// ```
@(impl = std_rust, feature_tree = false)
export fn trimEnd(
  /// The string to trim.
  @text: string,
): string {}

/// Convert a number to human-readable text.
///
/// Defined for every `number` value, including the non-finite ones.
///
/// | Value | Result | Why |
/// |---|---|---|
/// | `12` | `"12"` | no units, so no suffix |
/// | `1.5` | `"1.5"` | never rounded |
/// | `0.1 + 0.2` | `"0.30000000000000004"` | no digits are dropped |
/// | `-7` | `"-7"` | |
/// | `-0` | `"0"` | the sign of zero is not kept |
/// | `3_` | `"3_"` | a count keeps its `_` |
/// | `12mm` | `"12mm"` | a concrete length keeps its suffix |
/// | `12cm`, `12m`, `1.5in`, `2ft`, `3yd` | `"12cm"`, `"12m"`, `"1.5in"`, `"2ft"`, `"3yd"` | every length unit does |
/// | `90deg` | `"90deg"` | a concrete angle keeps its suffix |
/// | `1.5rad` | `"1.5rad"` | both angle units do |
/// | `2mm + 10mm` | `"12mm"` | arithmetic that keeps its units |
/// | `2mm * 10mm` | `"20"` | units no longer tracked, so none is shown |
/// | `1 / 0` | `"Infinity"` | |
/// | `-1 / 0` | `"-Infinity"` | |
/// | `0 / 0` | `"NaN"` | |
/// | `1mm / 0` | `"Infinity"` | a non-finite value never carries a unit |
///
/// The output is meant to be read, not parsed. Some results are not valid KCL
/// source and reading one back is not supported.
///
/// ```kcl,norun,sketchSyntaxAgnostic
/// lengthText = 12mm
///   |> string::toString()
///
/// assertIs(lengthText == "12mm")
///
/// countText = string::toString(3_)
///
/// assertIs(countText == "3_")
/// ```
@(impl = std_rust, feature_tree = false)
export fn toString(
  /// The number to convert.
  @num: number,
): string {}


---

(kcl_program
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (annotation
    (identifier))
  (annotation
    (identifier)
    (annotation_kv
      (identifier)
      (identifier))
    (annotation_kv
      (identifier)
      (number)))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (annotation
    (annotation_kv
      (identifier)
      (identifier))
    (annotation_kv
      (identifier)
      (identifier)))
  (body_item
    (variable_declaration
      (fn_definition
        (identifier)
        (param_list
          (comment)
          (param
            (identifier)
            (type_name
              (identifier))))
        (type_name
          (identifier)))))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (annotation
    (annotation_kv
      (identifier)
      (identifier))
    (annotation_kv
      (identifier)
      (identifier)))
  (body_item
    (variable_declaration
      (fn_definition
        (identifier)
        (param_list
          (comment)
          (param
            (identifier)
            (type_name
              (identifier))))
        (type_name
          (identifier)))))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (annotation
    (annotation_kv
      (identifier)
      (identifier))
    (annotation_kv
      (identifier)
      (identifier)))
  (body_item
    (variable_declaration
      (fn_definition
        (identifier)
        (param_list
          (comment)
          (param
            (identifier)
            (type_name
              (identifier)))
          (comment)
          (param
            (identifier)
            (type_name
              (identifier)))
          (comment)
          (param
            (identifier)
            (type_name
              (identifier))
            default: (boolean)))
        (type_name
          (identifier)))))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (annotation
    (annotation_kv
      (identifier)
      (identifier))
    (annotation_kv
      (identifier)
      (identifier)))
  (body_item
    (variable_declaration
      (fn_definition
        (identifier)
        (param_list
          (comment)
          (param
            (identifier)
            (type_name
              (identifier))))
        (type_name
          (identifier)))))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (annotation
    (annotation_kv
      (identifier)
      (identifier))
    (annotation_kv
      (identifier)
      (identifier)))
  (body_item
    (variable_declaration
      (fn_definition
        (identifier)
        (param_list
          (comment)
          (param
            (identifier)
            (type_name
              (identifier))))
        (type_name
          (identifier)))))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (annotation
    (annotation_kv
      (identifier)
      (identifier))
    (annotation_kv
      (identifier)
      (identifier)))
  (body_item
    (variable_declaration
      (fn_definition
        (identifier)
        (param_list
          (comment)
          (param
            (identifier)
            (type_name
              (identifier))))
        (type_name
          (identifier)))))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (body_item
    (comment))
  (annotation
    (annotation_kv
      (identifier)
      (identifier))
    (annotation_kv
      (identifier)
      (identifier)))
  (body_item
    (variable_declaration
      (fn_definition
        (identifier)
        (param_list
          (comment)
          (param
            (identifier)
            (type_name
              (identifier))))
        (type_name
          (identifier))))))
